# StarResonance_Japan_Market_Analyzer

./: .gitignore  .prettierignore  BATCH_SCRIPTS.md  BPSR_INTEGRATION_COMPLETE.md  BUILD_STATUS.md  CONTRIBUTING.md  DEBUG_CAPTURE.md  Dockerfile  GAME_SERVER_DETECTED.md  ICONS_GUIDE.md  INSTALLATION.md  INSTALL_GUIDE.md  LICENSE  LICENSE_NOTES.md  PHASE1_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  PYTHON_INSTALL.md  QUICKSTART.md  QUICK_START_ITEM_NAMES.md  README.md  README_ITEM_NAMES.md  SUMMARY.md  TESTING_GUIDE.md  WORKFLOW_GUIDE.md  build.bat  check-python.bat  clean.bat  create-dummy-icons.bat  create-simple-icon.ps1  debug-install.bat  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  find-python.bat  generate-icons.ps1  install-minimal.bat  package.json  quick-install.bat  requirements-dev.txt  requirements-prod.txt  (+9 more)
data/: item_master.json
docs/: API_DESIGN.md  ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  PACKET_ANALYSIS.md  ROADMAP.md  api-reference.md  cloudflare-tunnel.md  packet-analysis.md  realtime-capture.md
examples/: basic_usage.py  realtime_capture_example.py
scripts/: import_from_json.py  import_sample_data.py
src/: __init__.py  app.css  config.py
src-tauri/: Cargo.toml  README_WINDIVERT.md  THIRD_PARTY_LICENSES.md  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: README.md
src-tauri/resources/: README.md
src-tauri/src/: database.rs  game_packet.rs  main.rs  models.rs  packet_capture.rs  packet_parser.rs  tcp_reassembler.rs  windivert.rs  windivert_loader.rs
tests/: __init__.py  (+2 more)
(+42 files in other folders)
