[package]
name = "starresonance-market-analyzer"
version = "0.1.0"
description = "Blue Protocol: Star Resonance Market Data Analyzer"
authors = ["StarResonance Market Analyzer Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
etherparse = "0.15"
once_cell = "1.19"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_System_Threading",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
